--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular2": "2.0.0-beta.6",
+    "angular2": "2.0.0-beta.15",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "^0.6.10",
     "babel-core": "6.5.2",
     "babel-eslint": "4.1.8",
     "babel-loader": "6.2.2",
@@ -21,13 +25,9 @@
     "babel-plugin-transform-flow-strip-types": "6.5.0",
     "babel-preset-es2015": "6.5.0",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.13",
     "es7-reflect-metadata": "^1.5.5",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.0",
     "strip-loader": "^0.1.2",
     "validate.js": "0.9.0",
-    "webpack": "1.12.13",
-    "zone.js": "0.5.14"
+    "webpack": "1.12.13"
   }
 }
